# rust-embedded-playground

./: Cargo.toml  README.md  memory.x  openocd.cfg  openocd.gdb
.cargo/: config.toml
src/: clock_power.rs  leds.rs  main.rs  timer.rs
