[package]
authors = ["Dylan McGannon <dylan@encapto.com>"]
edition = "2021"
readme = "README.md"
name = "rust-embed"
version = "0.1.0"

[dependencies]
cortex-m = "0.7.7"
cortex-m-rt = "0.7.3"
cortex-m-semihosting = "0.5.0"
panic-halt = "0.2.0"

# [dependencies.stm32h7]
# version = "0.15.1"
# features = ["stm32h743", "rt"]

[dependencies.stm32h7xx-hal]
version = "^0.13.1"
features = ["stm32h743v"]

[[bin]]
name = "rust-embed"
test = false
bench = false

[profile.release]
codegen-units = 1 # better optimizations
debug = true # symbols are nice and they don't increase the size on Flash
lto = true # better optimizations
